--- a/air-life-app/www/index.html
+++ b/air-life-app/www/index.html
@@ -33,6 +33,8 @@
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
+
+    <script src="lib/ionic/js/slidingTabsDirective.js"></script>
   </head>
   <body ng-app="starter">
     <!--
