--- a/air-life-app/www/index.html
+++ b/air-life-app/www/index.html
@@ -22,6 +22,7 @@
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
     <script src="lib/ionic/js/slidingTabsDirective.js"></script>
+    <script src="js/url/config.js"></script>
 
   </head>
   <body ng-app="starter">
