--- a/air-life-app/www/index.html
+++ b/air-life-app/www/index.html
@@ -4,10 +4,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title></title>
-    <!--引高德地图-->
-    <script src="http://webapi.amap.com/js/marker.js"></script>
-    <script src="http://webapi.amap.com/maps?v=1.3&key=82becc5b2a537035ab470d2999ee79e1"></script>
-    <!--<script type="text/javascript" src="http://webapi.amap.com/demos/js/liteToolbar.js"></script>-->
 
 
     <link rel="manifest" href="manifest.json">
@@ -34,5 +30,11 @@
       </ion-nav-back-button>
     </ion-nav-bar>
     <ion-nav-view></ion-nav-view>
+
   </body>
+  <!--&lt;!&ndash;引高德地图&ndash;&gt;-->
+  <!--<script src="http://webapi.amap.com/js/marker.js"></script>-->
+  <!--<script src="http://webapi.amap.com/maps?v=1.3&key=82becc5b2a537035ab470d2999ee79e1"></script>-->
+  <!--<script type="text/javascript" src="http://webapi.amap.com/demos/js/liteToolbar.js"></script>-->
+
   </html>
