修改打电话功能

--- a/air-life-app/www/index.html
+++ b/air-life-app/www/index.html
@@ -33,7 +33,7 @@
 
   </body>
   <!--&lt;!&ndash;引高德地图&ndash;&gt;-->
-  <script src="http://webapi.amap.com/js/marker.js"></script>
+  <!--<script src="http://webapi.amap.com/js/marker.js"></script>-->
   <script src="http://webapi.amap.com/maps?v=1.3&key=82becc5b2a537035ab470d2999ee79e1"></script>
   <!--<script type="text/javascript" src="http://webapi.amap.com/demos/js/liteToolbar.js"></script>-->
 
