主页推荐医生

--- a/air-life-app/www/index.html
+++ b/air-life-app/www/index.html
@@ -20,6 +20,16 @@
     <script src="lib/ionic/js/slidingTabsDirective.js"></script>
     <script src="js/url/config.js"></script>
 
+    <!--菊花图-->
+    <!--<script src="lib/gasparesganga-jquery-loading-overlay/src/loadingoverlay.min.js"></script>-->
+
+
+    <script src="lib/jquery/dist/jquery.min.js"></script>
+    <!--<link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css">-->
+    <script src="lib/bootstrap/dist/js/bootstrap.min.js"></script>
+    <!--<script src="lib/angular/angular.min.js"></script>-->
+
+
   </head>
   <body ng-app="starter">
     <!--
@@ -32,9 +42,11 @@
     <ion-nav-view></ion-nav-view>
 
   </body>
+
+
   <!--&lt;!&ndash;引高德地图&ndash;&gt;-->
   <!--<script src="http://webapi.amap.com/js/marker.js"></script>-->
-  <script src="http://webapi.amap.com/maps?v=1.3&key=82becc5b2a537035ab470d2999ee79e1"></script>
+  <!--<script src="http://webapi.amap.com/maps?v=1.3&key=82becc5b2a537035ab470d2999ee79e1"></script>-->
   <!--<script type="text/javascript" src="http://webapi.amap.com/demos/js/liteToolbar.js"></script>-->
 
   </html>
